--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,17 @@
-h1  {
+body {
+  background-color: black;
+  text-align: center;
   font-family: verdana;
+}
+h1  {
+
+  font-weight: normal;
+  font-size: 50px;
+  color: white;
+  text-align: center;
+}
+h2 {
+  color: aquamarine;
+  font-size: 16px;
+  text-align: center;
 }
