--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,3 +15,32 @@ h2 {
   font-size: 16px;
   text-align: center;
 }
+h3  {
+  font-family: verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white
+}
+.travelguide p {
+      font-family: verdana;
+    font-size: 21px;
+    color: grey;
+  }
+.spacer
+{
+    font-size: 0;
+    height: 20px;
+    line-height: 0;
+}
+.comingsoon h3 {
+  color: white;
+}
+a {
+  text-underline-position: below;
+  color: aquamarine;
+  font-size: 16px;
+}
+.copywrite p {
+  text-align: right;
+  color: grey;
+}
